add plan name into plan schema
